tests/semantic/invalid/46_e_is_undefined_type.hulk
let x = 1 in x is Ghost;
